# document-analysis-tool

./: LICENSE  pyproject.toml  requirements.txt  search.py
