[project]
name = "keywords"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb==0.5.3",
    "matplotlib>=3.9.2",
    "openai>=1.51.2",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.9",
    "streamlit-chromadb-connection>=1.0.5",
    "streamlit>=1.36.0",
    "unstructured[pdf]>=0.15.14",
    "wordcloud>=1.9.3",
]
